Testing reading files

--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
   <button id="gen_sample_input" type="sample">Sample input</button>
   <button id="submit_job" type="submit">Submit</button>
 
+  <input type="file" id="file" name="file" enctype="multipart/form-data" />
+
   </p>
   </section>
   <div id="content"></div>
