--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/numjs/0.14.2/numjs.min.js"></script>
 <script src="js/smoothscroll.js"></script>
+<script src="js/node_modules/bionode-fasta/bionode-fasta.min.js"></script>
 <script src="js/dropzone.js"></script>
 <script src="js/rna_tfo_pred.js"></script>
 <header>
