--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
    </p>
    <p>
      Right now you can only compute the prediction for a given sequence. In the near future you will be able to upload a fasta file
-     which might contain more than one sequence. 
+     which might contain more than one sequence.
      </p>
   </section>
   <section>
@@ -35,10 +35,16 @@
       TFO concentration (mM): <br> <input type="text" name="tfo_conc"><br>
       Duplex concentration (mM): <br> <input type="text" name="dup_conc"><br>
   </form>
+
   <button id="gen_sample_input" type="sample">Sample input</button>
   <button id="submit_job" type="submit">Submit</button>
 
+  <p> If you prefer, you can add a multiple-sequence fasta file, and I will process it
+    for you. As soon as your file has been read, the output will show up.
+    So far the calculations are done at the default pH (5.6), this will change. 
+  </p>
   <input type="file" id="file" name="file" enctype="multipart/form-data" />
+  <output id="list"></output>
 
   </p>
   </section>
