--- a/index.html
+++ b/index.html
@@ -1,63 +1,64 @@
 <!doctype html>
 <html>
-<head>
-  <meta charset="utf-8">
-  <title>RNA-DNA2 stability predictor</title>
-</head>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/numjs/0.14.2/numjs.min.js"></script>
-<script src="js/smoothscroll.js"></script>
-<script src="js/dropzone.js"></script>
-<script src="js/bundle.js"></script>
-<header>
-  <div>This is for navigation and so on </div>
-  <div> <a href="index.html" id="mainpage">Main page </a> </div>
-</header>
-<body>
-<link rel="stylesheet" type="text/css" href="css/solarized-light.css" />
-<link rel="stylesheet" type="text/css" href="css/custom.css" />
-<h2 id="sect1">Predictor of RNA-DNA<sub>2</sub> stability
-</h2>
-  <section>
-    <p class="center-justified">Given an sRNA sequence containing only C/U,
-      returns the expected thermodynamic properties of the parallel
-     triplex it would form. Please note that no other nucleotides are allowed.
-   </p>
-   <p>
-     Right now you can only compute the prediction for a given sequence. In the near future you will be able to upload a fasta file
-     which might contain more than one sequence.
-     </p>
-  </section>
-  <section>
-    <form id="frm">
-      Sequence: <br> <input type="text" name="seq" contenteditable="true"><br>
-      pH: <br> <input type="text" name="pH"><br>
-      TFO concentration (mM): <br> <input type="text" name="tfo_conc"><br>
-      Duplex concentration (mM): <br> <input type="text" name="dup_conc"><br>
-  </form>
 
-  <button id="gen_sample_input" type="sample">Sample input</button>
-  <button id="submit_job" type="submit">Submit</button>
+  <head>
+    <meta charset="utf-8">
+    <title>RNA-DNA2 stability predictor</title>
+  </head>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/numjs/0.14.2/numjs.min.js"></script>
+  <script src="js/smoothscroll.js"></script>
+  <script src="js/dropzone.js"></script>
+  <script src="js/bundle.js"></script>
+  <header>
+    <div>This is for navigation and so on </div>
+    <div> <a href="index.html"
+        id="mainpage">Main page
+      </a> </div>
+  </header>
 
-  <p> If you prefer, you can add a multiple-sequence fasta file, and I will process it
-    for you. As soon as your file has been read, the output will show up.
-    So far the calculations are done at the default pH (5.6), this will change. 
-  </p>
-  <input type="file" id="file" name="file" enctype="multipart/form-data" />
-  <output id="list"></output>
+  <body>
+    <link rel="stylesheet"
+      type="text/css"
+      href="css/solarized-light.css" />
+    <link rel="stylesheet"
+      type="text/css"
+      href="css/custom.css" />
+    <h2 id="sect1">Predictor of RNA-DNA<sub>2</sub>
+      stability
+    </h2>
+    <section>
+      <p class="center-justified">
+        Given an sRNA sequence containing only C/U, returns the expected thermodynamic properties
+        of the parallel triplex it would form. Please note that no other nucleotides
+        are allowed. </p>
+    </section>
+    <section>
+      <form id="frm">
+        Sequence: <br> <input type="text" name="seq" contenteditable="true"><br>
+        pH: <br> <input type="text" name="pH"><br>
+        TFO concentration (mM): <br> <input type="text"name="tfo_conc"><br>
+        Duplex concentration (mM): <br> <input type="text" name="dup_conc"><br>
+      </form>
 
-  </p>
-  </section>
-  <div id="content"></div>
-  <br>
-  <section>
-  </section>
-  <a href="#sect1" id="take2top">Take me to the top</a>
-<footer>
-  <p style="text-align: center;"
-   onclick="alert('Fake email, do not bother.');">
-   Do-not-contact: yeah.right@fake-page.com
-  </p>
-</footer>
-</body>
+      <button id="gen_sample_input" type="sample">Sample input</button>
+      <button id="submit_job" type="submit">Submit</button>
+      <button id="clear_form" type="submit">Reset</button>
+
+      <p> If you prefer, you can add a multiple-sequence fasta file, and I will process
+        it for you. As soon as your file has been read, the output will show up.
+      </p> <input type="file"
+        id="file1"
+        name="file"
+        enctype="multipart/form-data" /> </p>
+    </section>
+    <div id="content"></div> <br>
+    <section></section> <a href="#sect1"
+      id="take2top">Take me to the top</a>
+    <footer>
+      <p style="text-align: center;"
+        onclick="alert('Fake email, do not bother.');"> Do-not-contact: yeah.right@fake-page.com </p>
+    </footer>
+  </body>
+
 </html>
